--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    implementation 'org.projectlombok:lombok'
+    annotationProcessor('org.projectlombok:lombok')
+
 }
 
 test {
