--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,5 @@ dependencies {
     implementation 'com.h2database:h2'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
 }
